--- a/src/home.ui
+++ b/src/home.ui
@@ -84,6 +84,13 @@
         </property>
        </widget>
       </item>
+      <item>
+       <widget class="QPushButton" name="FD_btn">
+        <property name="text">
+         <string>Find Destination</string>
+        </property>
+       </widget>
+      </item>
      </layout>
     </item>
    </layout>
